charon/tests/ui/unsupported/issue-167-self-constructors.out
error: assertion failure: "user_annotation.is_none()"
  --> tests/ui/unsupported/issue-167-self-constructors.rs:19:9
   |
19 |         Self { r }
   |         ^^^^^^^^^^

error: aborting due to previous error

[ ERROR charon_driver:227] The extraction encountered 1 errors
Error: Charon driver exited with code 1
